--- a/Vienna/Interfaces/es.lproj/FeedCredentials.strings
+++ b/Vienna/Interfaces/es.lproj/FeedCredentials.strings
@@ -16,3 +16,6 @@
 /* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "El nombre de usuario y la contraseña serán recordados para la próxima vez que actualice esta suscripción.";
 
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "Lvs-Rd-GZy"; */
+"Lvs-Rd-GZy.title" = "URL:";
+
