--- a/Vienna/Interfaces/gl.lproj/Preferences.strings
+++ b/Vienna/Interfaces/gl.lproj/Preferences.strings
@@ -1,3 +1,9 @@
+/* Class = "NSMenuItem"; title = "Manually"; ObjectID = "7Za-ay-jlt"; */
+"7Za-ay-jlt.title" = "Nunca";
+
+/* Class = "NSMenuItem"; title = "Manually"; ObjectID = "ANH-Pd-PJC"; Note = "Erase deleted articles: Manually"; */
+"ANH-Pd-PJC.title" = "Nunca";
+
 /* Class = "NSMenuItem"; title = "After one day"; ObjectID = "c4l-M5-qB1"; */
 "c4l-M5-qB1.title" = "Despois dun día";
 
