--- a/Vienna/Interfaces/uk.lproj/FeedCredentials.strings
+++ b/Vienna/Interfaces/uk.lproj/FeedCredentials.strings
@@ -16,3 +16,6 @@
 /* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Ім'я користувача та пароль будуть збережені, отож вам не доведеться вводити їх знову.";
 
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "Lvs-Rd-GZy"; */
+"Lvs-Rd-GZy.title" = "Адреса:";
+
