--- a/Vienna/Interfaces/uk.lproj/Preferences.strings
+++ b/Vienna/Interfaces/uk.lproj/Preferences.strings
@@ -19,6 +19,9 @@
 /* Class = "NSTextFieldCell"; title = "Mark current article read:"; ObjectID = "adB-qE-xKg"; */
 "adB-qE-xKg.title" = "Помітити поточну статтю як прочитану:";
 
+/* Class = "NSMenuItem"; title = "Manually"; ObjectID = "ANH-Pd-PJC"; Note = "Erase deleted articles: Manually"; */
+"ANH-Pd-PJC.title" = "Ніколи";
+
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "aWg-mD-YWn"; */
 "aWg-mD-YWn.title" = "Кожні 30 хвилин";
 
