--- a/Vienna/Resources/ko.lproj/Localizable.strings
+++ b/Vienna/Resources/ko.lproj/Localizable.strings
@@ -4,7 +4,7 @@
 /* No comment provided by engineer. */
 "(Untitled Feed)" = "(이름 없는 피드)";
 
-/* No comment provided by engineer. */
+/* Title of the Get Info panel. The variable is the name of the feed. */
 "%@ Info" = "%@ 정보";
 
 /* No comment provided by engineer. */
