--- a/Vienna/Interfaces/cs.lproj/FeedCredentials.strings
+++ b/Vienna/Interfaces/cs.lproj/FeedCredentials.strings
@@ -16,3 +16,6 @@
 /* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Zadané uživatelské jméno a heslo bude uchováno pro příští obnovení tohoto odebírání.";
 
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "Lvs-Rd-GZy"; */
+"Lvs-Rd-GZy.title" = "URL:";
+
