--- a/Vienna/Interfaces/nl.lproj/InfoWindow.strings
+++ b/Vienna/Interfaces/nl.lproj/InfoWindow.strings
@@ -35,7 +35,7 @@
 "U0N-RF-bUt.title" = "Authenticatie";
 
 /* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
-"xPF-M9-oZG.title" = "URL van feed";
+"xPF-M9-oZG.title" = "Feed-URL";
 
 /* Class = "NSButtonCell"; title = "Open Cached File…"; ObjectID = "xTj-hY-aTU"; */
 "xTj-hY-aTU.title" = "Open cachebestand…";
