--- a/Vienna/Resources/sv.lproj/InfoPlist.strings
+++ b/Vienna/Resources/sv.lproj/InfoPlist.strings
@@ -1,6 +1,9 @@
 /* A message that tells the user why Vienna is requesting the ability to send Apple events. */
 "NSAppleEventsUsageDescription" = "";
 
+/* A label for OPML (Outline Processor Markup Language) documents. This is shown in Finder's Get Info window, for example. */
+"OPML document" = "OPML-dokument";
+
 /* A label for plug-in bundles. This is shown in Finder's Get Info window, for example. */
 "Vienna plug-in" = "Vienna-insticksfil";
 
