--- a/Vienna/Resources/sv.lproj/Localizable.strings
+++ b/Vienna/Resources/sv.lproj/Localizable.strings
@@ -7,8 +7,8 @@
 /* Appended to application name in Open With menu */
 "%@ (default)" = "%@ (förval)";
 
-/* No comment provided by engineer. */
-"%@ Info" = "%@ info";
+/* Title of the Get Info panel. The variable is the name of the feed. */
+"%@ Info" = "%@-info";
 
 /* Progress in bytes, e.g. 1 KB of 1 MB */
 "%@ of %@" = "%1$@ av %2$@";
@@ -24,6 +24,9 @@
 
 /* No comment provided by engineer. */
 "A new Vienna database cannot be created at \"%@\" because the folder is probably located on a remote network share and this version of Vienna cannot manage remote databases. Please choose an alternative folder that is located on your local machine." = "En ny Vienna-databas kan ej skapas i '%@' för att mappen förmodligen finns på en nätverksdelning och den här versionen av Vienna stöder inte detta. Var vänlig och välj en mapp som finns på din lokala hårddisk.";
+
+/* No comment provided by engineer. */
+"AppleScript Error in '%@' script" = "AppleScript-fel i ”%@”-skriptet";
 
 /* No comment provided by engineer. */
 "Are you sure you want to delete all %d selected folders? This operation cannot be undone." = "Är du säker på att du vill radera alla %d markerade mappar? Det här valet går ej att ångra.";
@@ -173,6 +176,9 @@
 
 /* Already subscribed title */
 "Error" = "Fel";
+
+/* No comment provided by engineer. */
+"Error loading script '%@'" = "Fel vid inläsning av ”%@”-skriptet";
 
 /* No comment provided by engineer. */
 "Error parsing XML data in feed" = "Fel vid avläsning av XML-data i strömmen";
