--- a/Vienna/Interfaces/de.lproj/SearchFolder.strings
+++ b/Vienna/Interfaces/de.lproj/SearchFolder.strings
@@ -7,3 +7,6 @@
 /* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "97"; */
 "97.title" = "Abbrechen";
 
+/* Class = "NSTextFieldCell"; title = "Hold down the Option key to add nested rules."; ObjectID = "caT-eg-dXm"; */
+"caT-eg-dXm.title" = "Halte die Wahltaste gedrückt, um verschachtelte Bedingungen hinzuzufügen.";
+
